# telegrambotai

./: .gitignore  README.md  pyproject.toml  run.py  tox.ini
examples/: example_usage.py
src/: __init__.py
src/telegram_ai_bot/: admin.py  generators.py  keyboards.py  states.py  user.py
src/telegram_ai_bot/database/: __init__.py  models.py  requests.py
src/telegram_ai_bot/middleware/: __init__.py  subscribe_middleware.py
src/telegram_ai_bot/utils/: __init__.py  description.py  trim_history.py
tests/: __init__.py  test_admin.py  test_database.py  test_generators.py  test_keyboards.py  test_user.py
